docs/styleHomepage.css
video {
  width: 100%;
  height: 100%;
  object-fit: cover;
  cursor: pointer;

}

.container.mainMenu {
  background-color: #00537f;
  position: relative;
  top: 100px;
  transition: top 1s ease-in-out;
}

iframe {
  height: 100vh !important;
  object-fit: cover;
}

body {
  overflow: hidden;
}

/* /////// img full screen issue ///////// */

/* #block-system-main {

} */

.panel-3col-stacked {
  overflow: visible !important;
  padding: 0px !important;
}

.panel-3col-stacked-limiter,
.panel-panel,
.panel-pane,
.general-content-w-sidebars,
.general-content-primary {
  width: 100vw !important;
  height: 100vh !important;
}

.container.mainMenu span {
  color: white !important;
}

.container.mainMenu * img.igLogo {
  filter: brightness(100%) !important;
}

.container.mainMenu.close {
  top: 0px;
}

.headerWhite {
  height: 90px;
  transition: height 1s ease-in-out;
  overflow: hidden;
}

.headerWhite.close {
  height: 0px;
}

.headerWhite .pos-one {
  margin-left: calc(50% - 189px);
  height: 80px;
}

.headerWhite article {
  position: absolute;
  top: 50%;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

#nav-bar-wrapper {
  background-color: transparent;
}

#nav-bar {
  border: transparent;
}

/* Tibor */

.video-overlay {
    position: absolute;
  top: 50%;
  left: 50%;
  width: 70%;
  z-index: 9;
  position: absolute;
  transform: translate(-50%, -50%);
  text-align: center;
  font-size: xx-large;
  font-weight: bold;
  cursor: pointer;
  pointer-events: none;

}

@media screen and (max-width: 600px) {
    .video-overlay {
        font-size: 0.9rem;
        width: 90%;
        top: 41.5%;
    }
  }


  @media screen and (max-width: 700px) {
    .mainMenu .pos-four div {
      background-color: white;
    }
  }

